--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "1.0.10"
   },
   "scripts": {
+    "format": "prettier --write --single-quote --print-width=120 --tab-width=2 \"src/**/*.{js,jsx}\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
